@@ -191,7 +191,9 @@ PHOCOA.widgets.{$this->id}.Overlay.init = function() {
     ($this->height ? "\n    overlay.cfg.setProperty('height', '{$this->height}');" : NULL ) .
     ($this->x ? "\n    overlay.cfg.setProperty('x', '{$this->x}');" : NULL ) .
     ($this->y ? "\n    overlay.cfg.setProperty('y', '{$this->y}');" : NULL ) .
-    ($this->zIndex ? "\n    overlay.cfg.setProperty('zIndex', '{$this->zIndex}');" : NULL ) . "
+    ($this->zIndex ? "\n    overlay.cfg.setProperty('zIndex', '{$this->zIndex}');" : NULL ) .
+    // YUI only re-calcs center when item is VISIBLE thus if a width is defined and it's not visible often will cause horizontal scrollbars due to excess width
+    ($this->fixedcenter && !$this->visibility ? "overlay.center();" : NULL) . "
     // hopefully this next chunk can be removed when YUI fixes this internally
     // supposedly fixed in 2.3.0: https://sourceforge.net/tracker/?func=detail&atid=836476&aid=1723530&group_id=165715
     // we'll comment out for a bit to verify -- seems fixed in 2.7.0. leaving fix off for a bit...
@@ -231,5 +233,3 @@ PHOCOA.widgets.{$this->id}.Overlay.init = function() {
 
     function canPushValueBinding() { return false; }
 }
-
-?>
